# policyengine-api

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GCP_BILLING_ANALYSIS.md  Makefile  My Billing Account_Reports, 2025-10-01 — 2026-01-08.csv  README.md  alembic.ini  app.py  app.yaml  auto_tag_and_push.bat  auto_tag_and_push.ps1  budgetary_impact_results.json  cd  cd.pub  changelog.yaml  changelog_entry.yaml  emit_structured_requests.py  extract_budgetary_impact.py  feature_http_requests.json  logs.json  message_metrics.json  policy_requests.json  publish_tag.sh  pull_all_logs.py  pyproject.toml  region_values.csv  round_2_regression_tests.json  round_2_regression_tests.jsonc  round_2_regression_tests_1.json  round_2_regression_tests_2.json  round_2_regression_tests_3.json  round_2_regression_tests_4.json  round_3_budgetary_impacts.json  (+17 more)
.githook/: post-merge.sh
.github/: AUTO_TAGGING.md  bump_version.py  changelog_fragments.py  check-policyengine-bundle-supported.sh  copilot-instructions.md  find-api-model-versions.py  install-jq.sh  request-model-versions.sh  request-simulation-model-versions.sh  setup_env.sh  wait-for-pypi.sh
alembic/: README  env.py
changelog.d/: 3394.fixed.md  3410.changed.md  3440.changed.md  3445.fixed.md  3446.fixed.md  3447.fixed.md  3448.fixed.md  3449.fixed.md  3450.fixed.md  3451.fixed.md  3452.fixed.md  3453.fixed.md  3485.added.md  3487.changed.md  3494.changed.md  3496.added.md  3500.changed.md  3553.fixed.md  3555.fixed.md  3710.fixed.md  add-country-package-update-cron.changed.md  add-gateway-auth-client.added.md  app-engine-deploy-quiet.fixed.md  app-engine-idle-version-cleanup.changed.md  armor-enforce-metadata.changed.md  artifact-registry-image-cleanup.changed.md  budget-window-batch.fixed.md  bump-policyengine-us-to-1.596.6.changed.md  bump-policyengine-us-to-1.597.0.changed.md  bump-policyengine-us-to-1.598.0.changed.md  bump-policyengine-us-to-1.602.0.changed.md  calculate-malformed-payload-400.fixed.md  changelog-check-align-versioning.changed.md  cloud-run-concurrency-6.changed.md  cloud-run-http-startup-probe.fixed.md  cloud-run-scaling-config-reconcile.changed.md  cloud-run-warm-capacity-2.changed.md  codex-fix-economy-dataset-selection.fixed.md  codex-runtime-versioned-report-cache.fixed.md  deprecate-national-with-breakdowns.changed.md  (+348 more)
dashboard/: app.py
docker/: Dockerfile  Dockerfile.api  docker-compose.yml  start.sh
docs/: migration-pr1-baseline-runbook.md  migration-pr2-fastapi-shell-runbook.md  migration-pr3-cloud-run-candidate-runbook.md  migration-pr4-staging-service-runbook.md
gcp/: Dockerfile  README.md  bump_country_package.py  dispatch.yaml  export.py
policyengine_api/: README.md  api.py  asgi.py  asgi_factory.py  auth_context.py  constants.py  country.py  data.py  download_microdata.py  execution_receipt.py  gcp_logging.py  logging.py  migration_flags.py  migration_logging.py  migration_registry.py  observability.py  openapi_spec.yaml  readiness.py  repo.py  security.py  setup_data.py  structured_logger.py  testing.py  utils.py  validator.py  warmup.py  worker.py  workerManager.py
policyengine_api_old/: api.py  country.py  debug.py  logging.py
regression_runs/: policy_results_20250514_213400.json  policy_results_20250514_214552.json  policy_results_20250514_220410.json  policy_results_20250514_223108.json  policy_results_20250514_230751.json  policy_results_20250514_232919.json  policy_results_20250514_235257.json  policy_results_20250515_002219.json  policy_results_20250515_004038.json  policy_results_20250515_011227.json  policy_results_20250515_014044.json  policy_results_20250515_020328.json  policy_results_20250515_162716.json  policy_results_20250515_170011.json  policy_results_20250515_173144.json  policy_results_20250515_175749.json  policy_results_20250515_181740.json  policy_results_20250515_184324.json  policy_results_20250515_191238.json  policy_results_20250515_194801.json  policy_results_20250515_202916.json  policy_results_20250515_205928.json  policy_results_20250515_214623.json  policy_results_20250515_222256.json  policy_results_20250515_225430.json  policy_results_20250515_231427.json  policy_results_20250515_233710.json  policy_results_20250516_000640.json  (+17 more)
(+611 files in other folders)
