[project]
name = "policyengine-api"
version = "3.34.2"
description = "PolicyEngine API"
readme = "README.md"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
requires-python = ">=3.10"
dependencies = [
    "Flask-Caching>=2,<3",
    "anthropic",
    "assertpy",
    "click>=8,<9",
    "cloud-sql-python-connector",
    "faiss-cpu<1.8.0",
    "flask-cors>=5,<6",
    "flask>=3,<4",
    "google-cloud-logging",
    "google-cloud-logging>=3,<4",
    "gunicorn",
    "httpx>=0.27.0",
    "markupsafe>=3,<4",
    "microdf_python>=1.0.0",
    "openai",
    "policyengine-il==0.1.0",
    "policyengine-ng==0.5.1",
    "policyengine>=0.7.0",
    "policyengine_canada==0.96.3",
    "policyengine_core>=3.16.6",
    "policyengine_uk==2.39.0",
    "policyengine_us==1.562.3",
    "pydantic",
    "pymysql",
    "python-dotenv",
    "redis",
    "rq",
    "sqlalchemy>=1.4,<2",
    "streamlit",
    "werkzeug",
]

[project.scripts]
policyengine-api-setup = "policyengine_api.setup_data:setup_data"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "pytest-snapshot",
    "pytest-timeout",
    "towncrier>=24.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["policyengine_api"]

[tool.towncrier]
package = "policyengine_api"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
