[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-api"
version = "3.38.3"
description = "PolicyEngine API"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "anthropic",
    "assertpy",
    "click>=8,<9",
    "cloud-sql-python-connector",
    "faiss-cpu",
    "flask>=3,<4",
    "flask-cors>=5,<6",
    "Flask-Caching>=2,<3",
    "google-cloud-logging>=3,<4",
    "gunicorn",
    "httpx>=0.27.0",
    "markupsafe>=3,<4",
    "microdf_python>=1.0.0",
    "openai",
    "policyengine_canada==0.96.3",
    "policyengine-ng==0.5.1",
    "policyengine-il==0.1.0",
    "policyengine_uk==2.39.0",
    "policyengine_us==1.596.6",
    "policyengine_core>=3.16.6",
    "policyengine>=0.7.0",
    "pydantic",
    "pymysql",
    "python-dotenv",
    "redis",
    "rq",
    "sqlalchemy>=2,<3",
    "streamlit",
    "werkzeug",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "pytest-snapshot",
    "pytest-timeout",
    "ruff>=0.9.0",
    "towncrier>=24.8.0",
]

[project.scripts]
policyengine-api-setup = "policyengine_api.setup_data:setup_data"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_api"]

[tool.towncrier]
package = "policyengine_api"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
